[tool.poetry]
name = "imdb-experiments"
version = "0.1.0"
description = "IMBD dataset experiments"
authors = ["albertocarot1 <acaroli1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.2.0"
tensorflow-datasets = "^4.7.0"
numpy = "^1.23.5"
jupyterlab = "^3.5.1"
pandas = "^1.5.2"
datasets = "^2.7.1"
scikit-learn = "^1.1.3"
pylint = "^2.15.8"
testfixtures = "^7.0.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
